added card section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,49 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- feature will you like and love -->
+         <section>
+
+         </section>
+
+         <!-- some facts -->
+          <section>
+            <div class="description">
+                <h1 class="feature-title">Some Facts</h1>
+                <p class="text-light-grey card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="card-container">
+              <!--.card*4>img+h4.card-number+h5.card-name-->
+              <div class="card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="">
+                        <h4 class="card-number">54</h4>
+                        <h5 class="card-name">Awards Winnings</h5>
+                    </div>
+              </div>
+              <div class="card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="">
+                        <h4 class="card-number">1458</h4>
+                        <h5 class="card-name">Project Finished</h5>
+                    </div>
+              </div>
+              <div class="card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="">
+                        <h4 class="card-number">590</h4>
+                        <h5 class="card-name">Clients Worked</h5>
+                    </div>
+              </div>
+              <div class="card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="">
+                        <h4 class="card-number">22578</h4>
+                        <h5 class="card-name">Email Send</h5>
+                    </div>
+              </div>
+            </div>
+          </section>
     </main>
     <footer>
         
