--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
               </div>
             </div>
           </section>
+          <section>
+            <div class="sponsor-info">
+                <h3 class="feature-title">Our Sponsors</h3>
+                <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            
+            </div>
+          </section>
     </main>
     <footer>
         
