compelete architect design

--- a/index.html
+++ b/index.html
@@ -42,14 +42,44 @@
             </div>
         </section>
         <!-- feature will you like and love -->
-         <section>
+         <section class="feature-baba display-flex">
+            <div class="feature-will">
+                <h3 id="feature-sec-title" class="feature-title">Features you will<br>
+                     love & enjoy</h3>
+                <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
 
+                <!-- feature card container -->
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+            </div>
+            <div class="big-img">
+                <img src="images/architect.png" alt="">
+                <button class="btn-primary" id="experience-badge">
+                    <span class="experience-year">10 + years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
          </section>
 
          <!-- some facts -->
           <section>
             <div class="description">
-                <h1 class="feature-title">Some Facts</h1>
+                <h1 class="feature-title some-t">Some Facts</h1>
                 <p class="text-light-grey card-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             </div>
             <div class="card-container">
@@ -95,12 +125,11 @@
                 <img src="images/sponsors/google.png" alt="">
                 <img src="images/sponsors/telerama.png" alt="">
                 <img src="images/sponsors/figma.png" alt="">
-            
             </div>
           </section>
     </main>
     <footer>
-        
+        <p class="footer-p text-grey">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
